Fix: remove text decoration from social media links in footer and add padding on tablet/desktop devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,10 @@ section {
     font-size: 2rem;
 }
 
+.social-icon-links li a {
+    text-decoration: none;
+}
+
 .social-icon-links .fab {
     font-size: 2rem;
     padding: 1rem;
@@ -355,6 +359,10 @@ section {
         margin-top: 4rem;
     } 
 
+    .social-icon-links li a {
+        padding-left: 1rem;
+    }
+    
     .gallery {
         margin-top: 1rem;
     }
